# forestry-sdk-for-python

./: .gitignore  README.md
doc/: metric.stem.json  telemetry.stem.xml
doc/analytics/: README.md  create-harvesting-coordinate.kql  create-harvesting-log.kql  create-harvesting-measurement.kql  create-harvesting-product.kql  create-harvesting-stem.kql  create-reporting-actor.kql  create-reporting-machine.kql  create-telemetry-harvesting-stem.kql
doc/papinet/: AvailabilityV2R40.xsd  BookSpecificationV2R40.xsd  BusinessAcceptanceV2R40.xsd  BusinessAcknowledgementV2R40.xsd  CalendarV2R40.xsd  CallOffV2R40.xsd  CallOffWoodV2R40.xsd  ComplaintResponseV2R40.xsd  ComplaintV2R40.xsd  ContentOrderOfMatterV2R40.xsd  ContractV2R40.xsd  CreditDebitNoteV2R40.xsd  DeliveryInstructionV2R40.xsd  DeliveryMessageBookV2R40.xsd  DeliveryMessageV2R40.xsd  DeliveryMessageWoodV2R40.xsd  DeliveryPlanningV2R40.xsd  GoodsReceiptV2R40.xsd  InfoRequestV2R40.xsd  InventoryChangeV2R40.xsd  InventoryDispositionInstructionsV2R40.xsd  InventoryStatusV2R40.xsd  InvoiceV2R40.xsd  InvoiceWoodV2R40.xsd  LoadAvailableV2R40.xsd  LoadTenderResponseV2R40.xsd  LoadTenderV2R40.xsd  MeasuringInstructionV2R40.xsd  MeasuringTicketV2R40.xsd  OrderConfirmationV2R40.xsd  OrderConfirmationWoodV2R40.xsd  OrderStatusV2R40.xsd  PackingListV2R40.xsd  PlanningV2R40.xsd  PreflightV2R40.xsd  ProductAttributesV2R40.xsd  ProductPerformanceV2R40.xsd  (+12 more)
eng/tools/forestry-sdk-tools/: README.md  pyproject.toml
sdk/ai/forestry-ai-chat/: CHANGELOG.md  README.md  pyproject.toml
sdk/ai/forestry-ai-chat/forestry/ai/chat/: __init__.py  constants.py
sdk/ai/forestry-ai-customer/: README.md  pyproject.toml
sdk/ai/forestry-ai-customer/forestry/ai/customer/constants/: __init__.py  _rag.py
sdk/ai/forestry-ai-customer/tests/: README.md  conftest.py
(+23 files in other folders)
